Kubernetes_objects/07_Service/ingress/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service: 
            name: passage-webapp-svc
            port:
              number: 80
      - path: /v2/()(.*)
        pathType: Prefix
        backend:
          service: 
            name: passage-v2-webapp-svc
            port:
              number: 80
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: weather-api-svc
            port: 
              number: 80
      - path: /mysql
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port: 
              number: 80 -> 3306 -> 3306(mysql-server)
